# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  pyproject.toml  test_investigation.py  test_logs.py  test_observability.py  test_websocket_task2.py
backend/src/lms_backend/routers/: items.py
bot/: PLAN.md  bot.py  config.py
bot/nanobot/: Dockerfile  config.json  config.resolved.json  entrypoint.py  pyproject.toml
bot/nanobot/workspace/cron/: jobs.json
bot/nanobot/workspace/sessions/: cli_manual-test-a.jsonl  cli_task1a-loop.jsonl  cli_task1b-health.jsonl  cli_task1b-labs.jsonl  cli_task1c-final.jsonl  cli_task1c-sync.jsonl  cli_task1c.jsonl  cron_17b0d4ce.jsonl  webchat_054db777-4ac8-483f-9a66-839672f8d2b4.jsonl  webchat_212a32fd-8cc1-42c0-af74-3889639cf256.jsonl  webchat_24160871-f2cf-4c31-9973-691e8657cc50.jsonl  webchat_49dbfd19-f7d8-473c-9776-54d17b7d58c5.jsonl  webchat_4e4b00ca-c133-4f9c-9fce-61be8800fac5.jsonl  webchat_5c7613fc-1c12-4b83-8ae3-c815cae438d4.jsonl  webchat_6cdbe4e3-f847-49cb-aeee-3954960fe6fb.jsonl  webchat_b08c8bde-8e7e-4d70-92dc-90b07c794a0b.jsonl  webchat_dbb8aa91-44a7-4811-aa7f-e8c3e54416ae.jsonl  webchat_e0f6798a-a871-49b4-b9ec-a600fa5ee703.jsonl  webchat_ed58f619-275e-4757-a0c5-43f31fff2f68.jsonl
bot/nanobot/workspace/skills/lms/: SKILL.md
caddy/: Caddyfile
lab/tasks/required/: task-2.md
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  observability.py  server.py
nanobot/: Dockerfile  entrypoint.py
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
(+1 files in other folders)
